--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 /node_modules
 misc.html
+jobs.html
 contact-form-template.html
 mixed.html
 wordpress-mysql-db-cuciniale-12-12-2019-mysql57.zip
